Hotfix: fixed some CSS for form on smaller pages

--- a/client/src/components/Dashboard/navBar.css
+++ b/client/src/components/Dashboard/navBar.css
@@ -11,6 +11,7 @@ body {
     height: 100%;
     background-color: #212B38;
     min-width: 800px;
+    max-height: 84px;
 }
 
 .nav {
